--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 <section id="services">
   <div class="card">
     <h2 data-key="services_title">Nos Services</h2>
-    <p>🚗 <span data-key="ext_wash">Lavage extérieur</span> - <strong>À partir de 20 DT</strong></p>
-    <p>🧼 <span data-key="int_wash">Lavage intérieur</span> - <strong>À partir de 20 DT</strong></p>
-    <p>💎 <span data-key="full_wash">Lavage complet</span> - <strong>À partir de 30 DT</strong></p>
-    <p>🧽 <span data-key="carpet">Moquette / tapis</span> - <em data-key="on_demand">sur demande</em></p>
+    <p>🚗 <span data-key="ext_wash">Nettoyage extérieur</span> - <strong>À partir de 25 DT</strong></p>
+    <p>🧼 <span data-key="int_wash">Nettoyage intérieur</span> - <strong>À partir de 25 DT</strong></p>
+    <p>💎 <span data-key="full_wash">Nettoyage complet</span> - <strong>À partir de 45 DT(economisez 5dt)</strong></p>
+    <p>💎 <span data-key="full_wash">Pack Diamant(Premium à la vapeur)</span> - <strong>À partir de 129 DT</strong></p>
+    <p>🛋️ <span data-key="full_wash">Salon / Canape</span> - <strong>À partir de 79 DT</strong></p>
+    <p>🧽 <span data-key="carpet">Moquette / tapis/ Matelas </span> - <em data-key="on_demand">sur demande</em></p>
   </div>
 </section>
 
