--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <header>
   <div class="hero-text">
     <h1 data-key="hero_title">Lavage auto à domicile</h1>
-    <p data-key="hero_desc">Rapide, Pratique, Professionnel – Où que vous soyez !</p>
+    <b data-key="hero_desc">Votre voiture est notre passion,Une experience unique ! </b>
   </div>
 </header>
 
