--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <div class="hero-text">
     <h1 data-key="hero_title">Lavage auto à domicile</h1>
     <b data-key="hero_desc">Votre voiture est notre passion,Une experience unique ! </b>
-   <p data-key="hero_desc"> Nous offrons un service haut de gamme de nettoyage auto et mobilier, à domicile, avec des produits de qualité professionnelle et respectueux de l’environnement.
-Votre voiture, votre canapé… notre passion !</p>
+   <h5 data-key="hero_desc"> Nous offrons un service haut de gamme de nettoyage auto et mobilier, à domicile, avec des produits de qualité professionnelle et respectueux de l’environnement.
+Votre voiture, votre canapé… notre passion !</h5>
 
   </div>
 </header>
