--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ Votre voiture, votre canapé… notre passion !</h5>
     <form id="bookingForm" onsubmit="sendToWhatsapp(event)">
       <label data-key="name_label">Nom complet :</label>
       <input type="text" id="name" required />
+       <label data-key="adress_label">Adresse :</label>
+      <input type="text" id="adress" required />
       <label data-key="date_label">Date souhaitée :</label>
       <input type="date" id="date" required />
       <label data-key="service_label">Type de service :</label>
@@ -132,6 +134,7 @@ Votre voiture, votre canapé… notre passion !</h5>
       on_demand: "sur demande",
       reservation_title: "Réserver maintenant",
       name_label: "Nom complet :",
+     adress_label: "Votre adresse :",
       date_label: "Date souhaitée :",
       service_label: "Type de service :",
       time_label: "Créneau horaire :",
@@ -152,6 +155,7 @@ Votre voiture, votre canapé… notre passion !</h5>
       on_demand: "on request",
       reservation_title: "Book now",
       name_label: "Full Name:",
+      adress_label: "Your adress:",
       date_label: "Preferred date:",
       service_label: "Service type:",
       time_label: "Time slot:",
@@ -172,6 +176,7 @@ Votre voiture, votre canapé… notre passion !</h5>
       on_demand: "حسب الطلب",
       reservation_title: "احجز الآن",
       name_label: "الاسم الكامل:",
+      adress_label: "العنوان:",
       date_label: "التاريخ المطلوب:",
       service_label: "نوع الخدمة:",
       time_label: "الفترة الزمنية:",
